# Salsa20

./: CHANGELOG.md  CMakeLists.txt  README.md  Salsa20.pri
.github/workflows/: build.yml  tests.yml
include/salsa20/: ecrypt-config.h
tests/: CMakeLists.txt  bigtest.c  main.cpp
